# GameOfLife

./: CMakeLists.txt  board.txt  data.cpp  data.h  gui.cpp  gui.h  logic.cpp  logic.h  main.cpp
