cmake_minimum_required (VERSION 3.5.2)
project (gameoflife)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(glfw3 3.2 REQUIRED)
add_library(data "data.h" "data.cpp")
add_library(logic "logic.h" "logic.cpp")
add_library(gui "gui.h" "gui.cpp")
add_executable(gol "main.cpp")
target_link_libraries(gol glfw)
target_link_libraries(gol data)
target_link_libraries(gol logic)
target_link_libraries(gol gui)
target_link_libraries(gui logic)

find_package(OpenGL REQUIRED)
target_include_directories(gol PUBLIC ${OPENGL_INCLUDE_DIR})
target_link_libraries(gol ${OPENGL_gl_LIBRARY})
